--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
           <div class="projectHeading"><h1>2048</h1></div>
           <div class="projectDesc">2048 is a game where you just make the tiles all go left, right, up or down. Common tiles add up and random tiles add up at random places. Aim of the game is to get a tile of 2048 and even further.</div>
         </div>
+        
+        <div class="projectBox animGrowRight" id="colorMatcher">
+          <div class="projectHeading"><h1>Color Matcher</h1></div>
+          <div class="projectDesc">On the left is a random color, slide the range bars from 0 to 255 representing the 4 channels in a color. Toggle between 3 or 4 channels using the advanced button. Test your vision, and see if you can distinguish between similar colors or not.</div>
+        </div>
       </div>
     </div>
 
@@ -194,4 +199,4 @@
   </main>
 </body>
 
-</html>
+          </html>
